amazon-sqs/5.12/modules/ROOT/pages/amazon-sqs-connector-upgrade-migrate.adoc
= Upgrading and Migrating Amazon SQS Connector to 5.12 
:page-aliases: connectors::amazon/amazon-sqs-connector-upgrade-migrate.adoc

Upgrade Anypoint Connector for Amazon SQS to 5.12 to improve and optimize the performance of your projects using long polling, multithreading, and more control over the polling parameters.

== Supported Upgrade Paths

[%header,cols="50a,50a"]
|===
|From Version | To Version
|5.x |5.12.x
|===

== What's Changed

=== 5.12.2

* In the *Receive messages* source, the *Start delay time unit* field is renamed to *Time unit*, and its default value is changed from `SECONDS` to `MILLISECONDS`

=== 5.12

* Amazon SQS Connector now supports passing an external ID in Role-based authentication.
* In the *Receive messages* source, the *Time unit* field is renamed to *Start delay time unit*, and its default value is changed from `MILLISECONDS` to `SECONDS`.

=== 5.11

All of the Amazon SQS Connector error types are now exported. You can see specific error messages instead of MULE:UNKNOWN.

=== 5.10

Amazon SQS Connector now supports the addition of an SQS endpoint, which you can use with Amazon Virtual Private Cloud (VPC).

=== 5.9

With release 5.9 you now have the ability to enable long polling for the Read Message source and Read operation and to control the time interval for the polling. Long polling can reduce the number of network requests without affecting throughput.

Additionally, you can now configure the number of threads for your sources, allowing for a higher throughput in some situations.

=== 5.8

Amazon SQS Connector now supports sending and receiving large messages with payloads of up to 2 GB. This is beneficial when your application requires large amounts of data to be stored in queues.

[NOTE]
This feature requires the use of the Amazon S3 service. Large payload transmissions are billed as one SQS request and one S3 request. Billing for the payload is based on the amount of data stored in Amazon S3.

=== 5.7

The Messages object now contains a new `deduplicationId` field. If multiple messages are sent with the same deduplication ID, Amazon SQS accepts the messages successfully, but delivers only the first message during the 5-minute deduplication interval.

=== 5.6

Cluster node support was added back to the `Receive Messages` input source and works the same as it did in version 5.4.3. The input source listens for messages on all cluster nodes by default, but you can change this behavior by using the `Primary node only` field on the `Advanced` sub-tab on the `Receive Messages` tab. For more information, see xref:amazon-sqs-connector-config-topics.adoc#node-behavior[Receiving Messages in Cluster Mode].

=== 5.5

Version 5.5.0 was deprecated because cluster mode support was removed from that version.

=== 5.4.2

The Amazon SDK for Java dependency was upgraded to version 1.11.649.

== Requirements

Ensure your system meets the following requirements before you perform the upgrade:

[%header%autowidth.spread]
|===
|Application/Service|Version
|Mule |4.1.1 and later
|Java|11
|Anypoint Studio|7.0 and later
|===

See the xref:release-notes::connector/amazon-sqs-connector-release-notes-mule-4.adoc[Amazon SQS Connector Release Notes] for updated compatibility information for patch updates.

== Upgrade Prerequisites

Before you upgrade, create a backup of your files, data, and configurations in case you need to restore them.

== Upgrade Steps

Follow these steps to perform the upgrade:

. In Anypoint Studio, create a Mule project.
. In the *Mule Palette* view, click *Search in Exchange*.
. Enter `sqs` in the search field.
. In the *Available modules* section, select *Amazon SQS Connector* and click *Add*.
. Click *Finish*.
. Verify that the `mule-amazon-sqs-connector` dependency version is `5.9.x` in the `pom.xml` file in the Mule project. Replace `x` with the version that corresponds to the connector you are using.
. In version 5.5.0, the `Receive Messages` input source received messages on the primary node only. To obtain the same behavior in this version, access the *Advanced* tab in the *Receive Messages* source operation configuration and select the *Primary node only* field.
+
If you're upgrading from version 5.4.x or earlier to version 5.8 or later, this step is not needed.

Studio upgrades the connector automatically.

== Post Upgrade Steps

After you install the latest version of the connector, verify the upgrade:

. In Studio, verify that there are no errors in the *Problems* or *Console* views.
. Verify that there are no problems in the project `pom.xml` file.
. Test the connection and verify that the operations work.

== Troubleshooting

If there are problems with caching the parameters and metadata, try restarting Studio.

== Revert the Upgrade

If you must revert to your previous version of Amazon SQS Connector, change the `mule-amazon-sqs-connector` dependency version `5.9.x` in the project’s `pom.xml` to the latest version which is not deprecated, `5.8`.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
